# proton-anarchy

./: .gitignore  .proton-run.sh.kate-swp  Cargo.toml  README.md  install.sh  proton-run.sh  proton-steam-add-game.sh
.github/workflows/: build.yml  release.yml
.zed/: debug.json
proton-data/drive_c/users/steamuser/AppData/Local/Aspyr/Guitar Hero III/: AspyrConfig.xml
proton-data/drive_c/users/steamuser/AppData/Local/Rockstar Games/Launcher/: dxdiag.txt  manifest_launcher_dev_624.xml  prelauncher_events.json
proton-data/drive_c/users/steamuser/AppData/Local/openvr/: openvrpaths.vrpath
proton-data/drive_c/users/steamuser/AppData/Roaming/FLT/: steam_id.txt
proton-data/drive_c/users/steamuser/AppData/Roaming/Sekiro/: GraphicsConfig.xml
proton-data/drive_c/users/steamuser/Desktop/: Rockstar Games Launcher.lnk
proton-data/drive_c/users/steamuser/Documents/Horizon Forbidden West Complete Edition/: Horizon Forbidden West Complete Edition-v1.0.38.0 2024-10-13-04-33-31.mdmp  Horizon Forbidden West Complete Edition-v1.0.38.0 2024-10-13-14-52-38.mdmp  Horizon Forbidden West Complete Edition-v1.0.38.0 2024-10-28-01-10-14.mdmp
proton-data/drive_c/users/steamuser/Saved Games/God of War Ragnarök/6144/: GOWRSAVE0  GOWRSAVE1  GOWRSAVE10  GOWRSAVE11  GOWRSAVE12  GOWRSAVE13  GOWRSAVE14  GOWRSAVE2  GOWRSAVE3  GOWRSAVE4  GOWRSAVE5  GOWRSAVE6  GOWRSAVE7  GOWRSAVE8  GOWRSAVE9  userpreferences
src/: add_shortcut.rs  anarchy-add-shortcut.sh  anarchy-install-game.sh  anarchy-prepare.sh  gui.rs  install_game.rs  main.rs  prepare.rs  utils.rs
(+139 files in other folders)
